--- a/Zoj/Zoj.vcxproj
+++ b/Zoj/Zoj.vcxproj
@@ -110,6 +110,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="1001.A + B Problem.cpp" />
+    <ClCompile Include="1002.Fire Net.cpp" />
+    <ClCompile Include="1003.Crashing Balloon.cpp" />
+    <ClCompile Include="1004.Anagrams by Stack.cpp" />
+    <ClCompile Include="1005.Jugs.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
