--- a/Zoj/Zoj.vcxproj.filters
+++ b/Zoj/Zoj.vcxproj.filters
@@ -30,5 +30,14 @@
     <ClCompile Include="1005.Jugs.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="1006.Do the Untwist.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="1007.Numerical Summation of a Series.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="1008.Gnome Tetravex.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
